# C-to-Mips-compiler

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  makefile
Compiler/include/: Context.h  Record.h
Compiler/src/: compile.cpp
Lexer/: lexer.flex
Parser/ast/: ast_expression.h  ast_function.h  ast_initializer.h  ast_operators.h  ast_primitives.h  ast_statement.h  ast_unary.h
Parser/src/: parser.y
Translator/: translator.cpp  translator.h
